@@ -3416,5 +3416,9 @@ Mat_aux::postfix_mm(Mat< std::complex<T> >& x)
   }
 
 
+#ifdef ARMADILLO_EXTRA_MAT_MEAT
+#include ARMADILLO_EXTRA_MAT_MEAT
+#endif
+
 
 //! @}
